--- a/src/app/modules/restaurants/restaurants.component.html
+++ b/src/app/modules/restaurants/restaurants.component.html
@@ -1,4 +1,4 @@
-<div class="restaurants-container">
+<div class="app-restaurants-container">
   <app-restaurants-table
     [restaurants]="restaurants"
     [paginationMeta]="paginationMeta"
