--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="loader">
+<div class="app-loader">
   <mat-progress-spinner class="spinner" mode="indeterminate" diameter="36">
   </mat-progress-spinner>
 </div>
