--- a/src/app/modules/manage-restaurant/manage-restaurant.component.scss
+++ b/src/app/modules/manage-restaurant/manage-restaurant.component.scss
@@ -11,4 +11,39 @@
       margin: 0 !important;
     }
   }
+
+  .app-manage-restaurant-form-container {
+    margin-top: 24px;
+
+    .app-manage-restaurant-form {
+      padding-top: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+
+      button {
+        height: 56px
+      }
+
+      .mat-mdc-form-field:not(:first-child) {
+        margin-left: 16px;
+      }
+    }
+
+    .mat-mdc-card-header {
+      padding: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .app-manage-restaurant-form {
+    flex-wrap: wrap;
+    button, .app-manage-restaurant-form-inputs, .mat-mdc-form-field {
+      width: 100%;
+    }
+    .mat-mdc-form-field {
+      margin-left: 0 !important;
+    }
+  }
 }
