--- a/src/app/components/restaurants-table/restaurants-table.component.html
+++ b/src/app/components/restaurants-table/restaurants-table.component.html
@@ -50,9 +50,12 @@
         <ng-container matColumnDef="website">
           <th mat-header-cell mat-sort-header *matHeaderCellDef>Website</th>
           <td mat-cell *matCellDef="let item">
-            <a target="_blank" rel="noreferrer" href="{{ item.website }}">{{
-              item.website
-            }}</a>
+            <a
+              target="_blank"
+              rel="noreferrer"
+              href="{{ formatUrl(item.website) }}"
+              >{{ item.website }}</a
+            >
           </td>
         </ng-container>
 
